# abacus-llm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
abacus-llm/: config.py  main.py  preload-weights.py  train.py  utils.py
abacus-llm/data/: __init__.py  tokenizer.py
abacus-llm/model/: __init__.py  attention.py  gpt.py  layers.py
abacus-llm/training/: loss.py
utils/: attention.py  attention_mechanism.py  tokenizer.py
